[package]
name = "mojxml-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
flatgeobuf = { version = "4.1.0", default-features = false }
geo = { version = "0.28.0", default-features = false }
geozero = "0.12.0"
rayon = { version = "1.10.0" }
zip = { version = "1.2.2" } 
mojxml = { path = "../", features = ["geo", "zip"]}
clap = { version = "4.5.4", features = ["derive"] }
