[package]
name = "mojxml-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
flatgeobuf = { version = "4.1", default-features = false }
geo = { version = "0.28", default-features = false }
geozero = "0.12.0"
rayon = { version = "1.10" }
zip = { version = "1.2" } 
mojxml = { path = "../" }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
