[package]
name = "mojxml-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flatgeobuf = { version = "4.6", default-features = false }
geo = { version = "0.29", default-features = false }
geozero = "0.14.0"
rayon = { version = "1.10" }
mojxml = { path = "../" }
jprect = "0.0.4"
